# claude-agent-runner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: loop.md
.github/workflows/: build-push.yml  release-please.yml
app/: __init__.py  agent.py  cache.py  common.py  gl_poller.py  gl_token.py  k8shelper.py  poller.py  receiver.py  state.py
docs/: architecture.md  configuration.md  state-management.md
tests/: test_agent_fallback.py  test_common.py  test_gitlab_agent.py  test_gitlab_webhook.py  test_gl_poller.py  test_gl_token.py  test_package_imports.py  test_poller.py
