[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent-runner"
version = "0.1.0"
description = "General-purpose Claude Agent SDK runner for Kubernetes"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "kubernetes>=29.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyjwt[crypto]>=2.8",
    "PyGithub>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
